[package]
name = "transactions_demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
csv-async = { version = "1.2.1", features = ["tokio"] }
tokio = { version = "1.12.0", features = ["full"] }
tokio-stream = "0.1.7"
